# docsapp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: hooks.py
apps/apps/doctype/appointments/: appointments.js  appointments.json  appointments.py  test_appointments.py
apps/apps/doctype/clinic/: clinic.js  clinic.json  clinic.py  test_clinic.py
apps/apps/doctype/clinic/templates/: clinic.html
apps/apps/doctype/doctor/: doctor.js  doctor.json  doctor.py  test_doctor.py
apps/apps/doctype/shift/: shift.js  shift.json  shift.py  test_shift.py
apps/apps/web_form/book_appointment/: book_appointment.json
